--- a/NotasLoja/idiomas/MessagesBundle_en_US.properties
+++ b/NotasLoja/idiomas/MessagesBundle_en_US.properties
@@ -1,3 +1,50 @@
-cad_cliente_nome=Name
-cad_cliente_email=Email
+bt_voltar=Back
+bt_vizualizar=View Customer
+bt_procurar=Search Customer
+bt_deletar=Delete Customer
+bt_atuzalizar=Update Customer
+bt_cadastro=Register Customer
+
+lb_nome=Name
+lb_cidade=City
+lb_uf=State
+lb_cpf=Tax ID
+bt_cadastrar=Register
+
+lb_novo_nome=New Name
+lb_nova_cidade=New City
+lb_novo_uf=New State
+lb_novo_cpf=New Tax ID
+bt_recadastrar=Re-register
+
+bt_relatorio=Report
+message=enter the customers name!
+
+id_cliente=Client Id
+nome_cliente=Client Name
+cpf_cliente=Tax ID
+
+valor_total=Total Value
+emissao=Issue Date
+fechamento=Closing Date
+status=Status
+
+message_excluir=IT IS NOT POSSIBLE TO DELETE A CLIENT WITH ORDERS
+message_sucesso=Client registered successfully!
+message_cpf=Invalid CPF
+preco_unitario=Unit Price
+preco_total=Total Price
+
+id_pedido=Order ID
+
+
+
+
+
+
+
+
+
+
+
 
