--- a/NotasLoja/idiomas/MessagesBundle_pt_BR.properties
+++ b/NotasLoja/idiomas/MessagesBundle_pt_BR.properties
@@ -1,2 +1,45 @@
-cad_cliente_nome=dadasdasd
-cad_cliente_email=E-mail
+bt_voltar=Voltar
+bt_vizualizar= Vizualizar Cliente
+bt_procurar= Procurar Cliente
+bt_deletar= Deletar Cliente
+bt_atuzalizar= Atualizar Cliente
+bt_cadastro= Cadastar Cliente
+
+lb_nome=Nome
+lb_cidade=Cidade
+lb_uf=Uf
+lb_cpf=Cpf
+bt_cadastrar=Cadastrar
+
+lb_novo_nome=Novo Nome
+lb_nova_cidade=Nova Cidade
+lb_novo_uf=Novo Uf
+lb_novo_cpf=Novo Cpf
+bt_recadastrar=Recadastrar
+
+bt_relatorio=Relatório   
+message=digite o nome do cliente!
+
+id_cliente=Id Cliente
+nome_cliente=Nome Cliente
+cpf_cliente=CPF
+
+valor_total=Valor Total
+emissao=Emissão
+fechamento=Fechamento
+status=Status
+
+message_excluir=NÃO É POSSIVEL EXCLUIR UM CLIENTE COM PEDIDOS
+message_sucesso=Cliente cadastrado com sucesso!
+message_cpf=CPF Inválido
+preco_unitario=Preço Unitário
+preco_total=Preço Total
+
+id_pedido=Id Pedido
+
+
+
+
+
+
+
